<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BearLoc</string>
    <string name="menu_settings">Settings</string>
    <string name="main_title">BearLoc</string>
    <string name="settings_title">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="add_new">+ Add New</string>

    <string name="pref_device_category_summ">Device settings</string>
    <string name="pref_device_category">Device</string>
    <string name="pref_device_uuid_summ">UUID of the device</string>
    <string name="pref_device_uuid">Device UUID</string>
    
    <string name="pref_server_category_summ">Server settings</string>
    <string name="pref_server_category">Server</string>
    <string name="pref_server_addr_summ">Domain name or IP address of server</string>
    <string name="pref_server_addr">Server Address</string>
    <string name="default_server_addr">kaifei.info</string>
    <string name="pref_server_port_summ">Port of BearLoc service on server</string>
    <string name="pref_server_port">Server Port</string>
    <string name="default_server_port">10080</string>
    
    <string name="pref_general_category_summ">General settings</string>
    <string name="pref_general_category">General</string>
    <string name="pref_auto_report_summ">Automatically report location when possible</string>
    <string name="pref_auto_report">Automatic Report</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="loc_updated">Location Updated</string>
</resources>