<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:summary="@string/pref_general_category_summ"
        android:title="@string/pref_general_category" >
        <intent
            android:action="edu.berkeley.bearloc.PREF_GENERAL"
            android:targetClass="edu.berkeley.bearloc.SettingsActivity"
            android:targetPackage="edu.berkeley.bearloc" />
    </Preference>
    <Preference
        android:summary="@string/pref_server_category_summ"
        android:title="@string/pref_server_category" >
        <intent
            android:action="edu.berkeley.bearloc.PREF_SERVER"
            android:targetClass="edu.berkeley.bearloc.SettingsActivity"
            android:targetPackage="edu.berkeley.bearloc" />
    </Preference>
    <Preference
        android:summary="@string/pref_device_category_summ"
        android:title="@string/pref_device_category" >
        <intent
            android:action="edu.berkeley.bearloc.PREF_DEVICE"
            android:targetClass="edu.berkeley.bearloc.SettingsActivity"
            android:targetPackage="edu.berkeley.bearloc" />
    </Preference>
    

</PreferenceScreen>